start adding buttons